# cascaron

./: CMakeLists.txt  README.md  install_linux.sh
headers/: oclFiltro.hpp
kernels/: convolution.cl
sources/: main.cpp  oclFiltro.cpp
